--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server"
+    "dev": "ts-node-dev src/server",
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "keywords": [],
   "author": "",
