--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts",
     "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "keywords": [],
